tests/good/20_any_order_1.ris
void main():
    let int a = 42;
    println add(a, y);

    first(0);

    return;

global int y = 2 * x;

int add(int a, int b):
    return a + b;

global int x = 10;

void first(int a):
    a++;
    print "first: ";
    println a;
    if (a < 10):
        second(a);
    endif;
    return; 

void second(int a):
    a++;
    print "second: ";
    println a;
    if (a < 10):
        first(a);
    endif;
    return; 