tests/bad/12_redeclared_global_var_5.ris
int add(int a, int b):
    return a + b;

global int a = 4;
global int a = 2;

void main():
    add(a, a);
    return;